--- a/giriş.html
+++ b/giriş.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaydol</title>
-    <link rel="stylesheet" href="kaydol.css">
+    <title>Giriş</title>
+    <link rel="stylesheet" href="giriş.css">
     <link rel="icon" href="icon.ico" type="image/x-icon" />
 </head>
 <body>
@@ -15,18 +15,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaydol</title>
+    <title>Document</title>
     <link rel="stylesheet" href="kaydol.css">
 </head>
 <body>
     <form action="">
-        <h2>Kaydol</h2>
+        <h2>Giriş</h2>
         <input type="text" name="e posta" placeholder="E-Posta">
         <input type="password" name="şifre" placeholder="Parola">
         <a href="Ana sayfa.html">
-        <input type="button" value="kaydol">
+        <input type="button" value="Giriş Yap">
     </a>
-        
     </form>
 </body>
 </html>
