--- a/giriş.html
+++ b/giriş.html
@@ -1,33 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giriş</title>
-    <link rel="stylesheet" href="giriş.css">
-    <link rel="icon" href="icon.ico" type="image/x-icon" />
+	<meta charset="UTF-8">
+	<title>giriş yap</title>
+	<link rel="stylesheet" href="css/giriş.css">
 </head>
 <body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="kaydol.css">
-</head>
-<body>
-    <form action="">
-        <h2>Giriş</h2>
-        <input type="text" name="e posta" placeholder="E-Posta">
-        <input type="password" name="şifre" placeholder="Parola">
-        <a href="Ana sayfa.html">
-        <input type="button" value="Giriş Yap">
-    </a>
-    </form>
-</body>
-</html>
+	<div class="box">
+		<form autocomplete="off">
+			<h2>Giriş Yap</h2>
+			<div class="inputBox">
+				<input type="text" required="required">
+				<span>Userame</span>
+				<i></i>
+			</div>
+			<div class="inputBox">
+				<input type="password" required="required">
+				<span>Password</span>
+				<i></i>
+			</div>
+			<div class="links">
+				<a href="#">Forgot Password ?</a>
+				<a href="kaydol.html">Signup</a>
+			</div>
+			<input type="submit" value="Login">
+		</form>
+	</div>
 </body>
 </html>
