--- a/kaydol.html
+++ b/kaydol.html
@@ -4,31 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaydol</title>
-    <link rel="stylesheet" href="kaydol.css">
-    <link rel="icon" href="icon.ico" type="image/x-icon" />
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kaydol</title>
+    <title>Document</title>
     <link rel="stylesheet" href="kaydol.css">
 </head>
 <body>
     <form action="">
-        <h2>Kaydol</h2>
+        <h2>Giriş</h2>
         <input type="text" name="e posta" placeholder="E-Posta">
         <input type="password" name="şifre" placeholder="Parola">
-        <a href="Ana sayfa.html">
-        <input type="button" value="kaydol">
-    </a>
-        
+        <input type="submit" value="Giriş Yap">
     </form>
-</body>
-</html>
 </body>
 </html>
