--- a/kaydol.html
+++ b/kaydol.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="kaydol.css">
+	<meta charset="UTF-8">
+	<title>giriş yap</title>
+	<link rel="stylesheet" href="css/giriş.css">
 </head>
 <body>
-    <form action="">
-        <h2>Giriş</h2>
-        <input type="text" name="e posta" placeholder="E-Posta">
-        <input type="password" name="şifre" placeholder="Parola">
-        <input type="submit" value="Giriş Yap">
-    </form>
+	<div class="box">
+		<form autocomplete="off">
+			<h2>Giriş Yap</h2>
+			<div class="inputBox">
+				<input type="text" required="required">
+				<span>Userame</span>
+				<i></i>
+			</div>
+			<div class="inputBox">
+				<input type="password" required="required">
+				<span>Password</span>
+				<i></i>
+			</div>
+			<input type="submit" value="register">
+		</form>
+	</div>
 </body>
 </html>
